More work on data understanding

--- a/src/data_understanding.ipynb
+++ b/src/data_understanding.ipynb
@@ -791,7 +791,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tourney level\n",
+    "# 'O' and 'W' are not possible values for the attribute. We also notice that 'E', 'J', and 'T' are not present in the dataset.\n",
+    "# We replace such values with U that stands for Undefined\n",
+    "df_matches['tourney_level'].replace(['W', 'O'], 'U', inplace=True)\n",
+    "df_matches['tourney_level'].fillna('U', inplace=True)\n",
+    "df_matches['tourney_level'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tourney date\n",
+    "# Undefined date is 18000101 (January 1st, 1800)\n",
+    "# df_matches['tourney_date'].head()\n",
+    "df_matches['tourney_date'].fillna(18000101, inplace=True)\n",
+    "df_matches['tourney_date'] = pd.to_datetime(df_matches['tourney_date'], format=\"%Y%m%d\")\n",
+    "df_matches.head()"
+   ]
   },
   {
    "cell_type": "markdown",
